# content-cache

./: .env.example  .gitignore  DESIGN.md  README.md  pyproject.toml
.claude/: settings.local.json
docs/: REDIS_COMPARISON.md
examples/: pdf_transaction_extraction.py  redis_example.py  redownload_test.py  simple_usage.py
src/content_cache/: __init__.py  cache.py  config.py  exceptions.py  file_storage.py  integrity.py  interfaces.py  memory_cache.py  metrics.py  models.py  redis_storage.py  sqlite_storage.py
tests/: test_content_cache.py  test_file_storage.py  test_improvements.py  test_integrity.py  test_memory_cache.py  test_models.py  test_redis_storage.py  test_sqlite_storage.py
