[tool.poetry]
name = "content-file-cache"
version = "0.1.0"
description = "High-performance content caching solution for various file formats"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "content_cache", from = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^2.5.0"
aiofiles = "^23.2.1"
aiosqlite = "^0.19.0"
python-dotenv = "^1.0.0"
pybloom-live = "^4.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
pytest-cov = "^4.1.0"
black = "^23.11.0"
ruff = "^0.1.6"
mypy = "^1.7.1"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.black]
line-length = 100
target-version = ['py39']

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "C90", "I", "N", "UP", "B", "A", "C4", "SIM", "ARG"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"